objects/User.object
<CustomObject>
    <fields>
        <fullName>Base_User_ID__c</fullName>
        <label>Base User ID</label>
        <length>19</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shift_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Shift Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sked__skeduloUserType__c</fullName>
        <label>skeduloUserType</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>sked__skeduloUserType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Community Users</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Non_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non Community Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>